--- a/index.html
+++ b/index.html
@@ -8,6 +8,37 @@
     />
     <meta name="description" content="REISTI 公式サイト。プロ仕様のドリルビット／OEM対応。日本市場向けの高品質な製品をご提供します。" />
     <title>REISTI｜公式サイト</title>
+    <!-- Structured Data: Organization -->
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "Organization",
+  "name": "瑞士釘株式会社 REISTI",
+  "@id": "https://www.reisti.org/#org",
+  "alternateName": "REISTI",
+  "url": "https://www.reisti.org",
+  "logo": "https://www.reisti.org/logo.png",
+  "address": {
+    "@type": "PostalAddress",
+    "addressCountry": "JP",
+    "addressRegion": "神奈川県",
+    "addressLocality": "川崎市中原区上新城",
+    "streetAddress": "2-4-15"
+  },
+  "foundingDate": "2025-08-01",
+  "founder": {
+    "@type": "Person",
+    "name": "陳 兪岑"
+  },
+  "employee": [{
+    "@type": "Person",
+    "name": "陳 兪岑",
+    "jobTitle": "代表取締役社長"
+  }],
+  "description": "金物・工具・各種電動先端工具の製造販売"
+}
+</script>
+
   </head>
   <body class="antialiased bg-gray-50 text-gray-900">
     <div id="app"></div>
