--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0"
     />
+    <meta name="google-site-verification" content="G0-BUcMigqAS93ZKSPow7AikP1OPUZpFZZ4L3K9B2tc" />
     <meta name="description" content="REISTI 公式サイト。プロ仕様のドリルビット／OEM対応。日本市場向けの高品質な製品をご提供します。" />
     <title>REISTI｜公式サイト</title>
     <!-- Structured Data: Organization -->
